fixing flip on mobile iOS

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1662,7 +1662,7 @@ input, select, textarea {
 		}
 
 .rotate180 {
-    -webkit-transform: rotate(180deg);
+/*    -webkit-transform: rotate(180deg);*/
     -moz-transform: rotate(180deg);
     -o-transform: rotate(180deg);
     -ms-transform: rotate(180deg);
